--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,9 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
+    <header class="page-header">
+      <p>Тест</p>
+    </header>
 
   </body>
 </html>
