--- a/source/index.html
+++ b/source/index.html
@@ -5,9 +5,130 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header">
-      <p>Тест</p>
+    <header class="main-header">
+      <nav class="main-header__body main-navigation">
+        <ul class="main-navigation__list">
+          <li class="main-navigation__item">
+            <a href="#">Главная</a>
+          </li>
+          <li class="main-navigation__item">
+            <a href="#">Фото и видео</a>
+          </li>
+          <li class="main-navigation__item">
+            <a href="#">Форма отзыва</a>
+          </li>
+          <li class="main-navigation__item">
+            <a href="#">html academy</a>
+          </li>
+        </ul>
+        <button class="main-header__button-close" type="button">x</button>
+      </nav>
+      <div class="main-header__body main-header-logo__body">
+        <a class="main-header__logo">
+          <img class="main-header__logo-image" src="#" width="#" height="#" alt="логотип сайта Седона">
+        </a>
+          <button class="main-header__button-open" type="button"></button><!--Это button или a? Если a, то почему?-->
+      </div>
     </header>
-
+    <main class="container">
+      <h1 class="container__h1 visually-hidden">Туры в Седону</h1>
+      <div class="container__body container-banner__body">
+        <div class="container-banner">
+          <p class="container-banner__content first-line__content">Welcome</p>
+          <p class="container-banner__content second-line__content">to the gorgeous</p>
+          <p class="container-banner__content third-line__content">Sedona</p>
+          <p class="container-banner__content fourth-line__content">"Because the Grand Canyon sucks!"</p>
+        </div>
+      </div>
+      <section class="container__body container-reasons__section">
+        <div class="reasons-intro">
+          <p class="reasons-intro__content reasons-intro__lead">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="reasons-intro__content reasons-intro__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        </div>
+        <ul class="reasons__list"><!--если использовать нумерованный список, как в css сделать цифру в середине абзаца?-->
+          <li class="reasons-list__item"><!--выравнивание текста по центру-->
+            <div class="reasons-item__description main-reasons__description"><!--reasons-шрифт main-reasons-цвет шрифта и бэкграунд-->
+              <h2 class="reason-description__h2">Настоящий городок</h2>
+              <span class="reason-description__index-number">№1</span>
+              <p class="reason-description__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
+            </div>
+            <img class="reason-item__image" src="#" width="#" height="#" alt="вид на стереотипный мотель Дикого Запада">
+            <ul class="reasons-item__description advantages__description advantages__list"><!--advantages__description-цвет шрифта и бэкграунд advantages__list-выравнивание-->
+              <li class="advantages-list__item advantage-housing__icon">
+                <h2 class="advantage-item__h2">Жилье</h2>
+                <p class="advantage-item__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              </li>
+              <li class="advantages-list__item advantage-souvenirs__icon">
+                <h2 class="advantage-item__h2">Сувениры</h2>
+                <p class="advantage-item__text">Не только китайского, но и местного производства!</p>
+              </li>
+              <li class="advantages-list__item advantage-food__icon">
+                <h2 class="advantage-item__h2">Еда</h2>
+                <p class="advantage-item__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="reasons-list__item">
+            <div class="reasons-item__description main-reasons__description">
+              <h2 class="reason-description__h2">Там есть мост Дьявола</h2>
+              <span class="reason-description__index-number">№2</span>
+              <p class="reason-description__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </div>
+            <img class="reason-item__image" src="#" width="#" height="#" alt="узкий каменный мостик над пропастью">
+          </li>
+          <li class="reasons__description secondary-reasons__description reasons-list__item">
+            <h2 class="reason-description__h2">Небольшая площадь</h2>
+            <span class="reason-description__index-number">№3</span>
+            <p class="reason-description__text">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="reasons__description secondary-reasons__description reasons-list__item">
+            <h2 class="reason-description__h2">Красивая дорога</h2>
+            <span class="reason-description__index-number">№4</span>
+            <p class="reason-description__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="reasons__description secondary-reasons__description reasons-list__item">
+            <h2 class="reason-description__h2">Мало туристов</h2>
+            <span class="reason-description__index-number">№5</span>
+            <p class="reason-description__text">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
+      <section class="container__body container-commercial__section">
+        <div class="container-commercial">
+          <h2 class="commercial__h2">Заинтересовались?</h2>
+          <p class="commercial__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="commercial-button" href="#"></a>
+        </div>
+      </section>
+      <div class="container__body container-map__body">
+        <img class="container__map-image" src="#" width="#" height="#" alt="карта, на которой указано местоположение Седоны">
+      </div>
+    </main>
+    <footer class="main-footer">
+      <div class="main-footer__body">
+        <span class="main-footer-hashtag__content">#visitsedona</span>
+        <ul class="social-icon__list">
+          <li class="social-icon-item">
+            <a class="social-icon-twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+          <li class="social-icon-item">
+            <a class="social-icon-fb" href="#">
+              <span class="visually-hidden">Фэйсбук</span>
+            </a>
+          </li>
+          <li class="social-icon-item">
+            <a class="social-icon-Youtube" href="#">
+              <span class="visually-hidden">Ютюб</span>
+            </a>
+          </li>
+        </ul>
+        <div class="main-footer-copyright_content">
+          <p class="copyright_content">Разработано</p>
+          <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive"></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
