Снова поменяла баннер на Главной

--- a/source/index.html
+++ b/source/index.html
@@ -34,10 +34,10 @@
       <h1 class="container__h1 visually-hidden">Туры в Седону</h1>
       <div class="container__body container-banner__body">
         <div class="container-banner">
-          <p class="container-banner__content first-line__content">Welcome</p>
-          <p class="container-banner__content second-line__content">to the gorgeous</p>
-          <p class="container-banner__content third-line__content">Sedona</p>
-          <p class="container-banner__content fourth-line__content">"Because the Grand Canyon sucks!"</p>
+          <p class="container-banner__content welcome__content">Welcome</p>
+          <p class="container-banner__content georgeous__content">to the gorgeous</p>
+          <p class="container-banner__content sedona__content">Sedona</p>
+          <p class="container-banner__content because__content">"Because the Grand Canyon sucks!"</p>
         </div>
       </div>
       <section class="container__body container-reasons__section">
