--- a/source/form.html
+++ b/source/form.html
@@ -1,22 +1,99 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header>
-    </header>
-    <main class="container">
-      <h1 class="container__h1 visually-hidden">Форма отзыва</h1>
-      <div class="container__body container-banner__body">
-        <div class="container-banner">
-          <p class="container-banner__content sedona__content">Sedona</p>
-        </div>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header>
+  </header>
+  <main>
+    <div class="promo promo--inner">Баннер</div>
+    <section class="page-form">
+      <div class="page-intro">
+        <h1 class="page-intro__title">Оставьте свой отзыв</h1>
+        <p class="page-intro__text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
       </div>
-
-    </main>
-    <footer>
-    </footer>
-  </body>
+      <div class="page-form__inner">
+        <form class="form" action="#" method="post">
+          <fieldset class="form__group">
+            <legend class="form__group-title">Представьтесь:</legend>
+            <ul class="form__group-list">
+              <li class="form__group-item">
+                <label class="form__group-label" for="name">Имя*:</label>
+                <input class="form__group-name" id="name" name="name" type="text" placeholder="Петр" required>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group-label" for="sername">Фамилия*:</label>
+                <input class="form__group-name" id="sername" name="name" type="text" placeholder="Иванов" required>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group-label" for="patronym">Отчество:</label>
+                <input class="form__group-name" id="patronym" name="name" type="text" placeholder="Александрович">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__group">
+            <legend class="form__group-title">Контактная информация</legend>
+            <ul class="form__group-list">
+              <li class="form__group-item">
+                <label class="form__group-label" for="phone-number">Контактный телефон*:</label>
+                <input class="form__group-phone-number" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group-label" for="email">Электронная почта*:</label>
+                <input class="form__group-e-mail" id="email" name="email" type="email" placeholder="Введите e-mail" required>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__group">
+            <legend class="form__group-title">Ваше общее впечатление:</legend>
+            <ul class="form__group-list">
+              <li class="form__group-item">
+                <label class="form__group--radio-label" for="positive">Скорее положительное</label>
+                <input class="form__group--radio form__group--radio-checked visually-hidden" id="positive" type="radio" name="positive" checked>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group--radio-label" for="negative">Скорее отрицательное</label>
+                <input class="form__group--radio visually-hidden" id="negative" type="radio" name="negative">
+              </li>
+              <li class="form__group-item">
+                <label class="form__group--radio-label" for="neutral">Затрудняюсь ответить</label>
+                <input class="form__group--radio visually-hidden" id="neutral" type="radio" name="neutral">
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="form__group">
+            <legend class="form__group-title">Посещенные достопримечательности:</legend>
+            <ul class="form__group-list">
+              <li class="form__group-item">
+                <label class="form__group--checkbox-label" for="bridge">Мост Дьявола</label>
+                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="bridge" type="checkbox" name="bridge" checked>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group--checkbox-label" for="mountain">Гора-Колокол</label>
+                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="mountain" type="checkbox" name="mountain" checked>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group--checkbox-label" for="park">Слайд-парк</label>
+                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="park" type="checkbox" name="park" checked>
+              </li>
+              <li class="form__group-item">
+                <label class="form__group--checkbox-label" for="rocks">Красные скалы</label>
+                <input class="form__group--checkbox visually-hidden" id="rocks" type="checkbox" name="rocks">
+              </li>
+            </ul>
+          </fieldset>
+          <div class="form__inner">
+            <label class="form__label" for="review">Опишите свои эмоции:</label>
+            <textarea class="form__description" id="review" name="review" placeholder="Опишите подробно все свои восторги"></textarea>
+          </div>
+          <button class="button page-form__button" type="submit">Отправить отзыв</button>
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer>
+  </footer>
+</body>
 </html>
