--- a/source/photo.html
+++ b/source/photo.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header>
-    </header>
-    <main class="container">
-      <h1 class="container__h1 visually-hidden">Туры в Седону</h1>
-
-    </main>
-    <footer>
-    </footer>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header>
+  </header>
+  <main>
+    <div class="promo promo--inner">Баннер</div>
+    <section class="photo-video">
+      <div class="page-intro">
+        <h1 class="page-intro__title">Фото и видео</h1>
+        <p class="page-intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+      </div>
+      <div class="promo-photo">
+        <img class="promo-photo__image" src="#" width="#" height="#" alt="Закат с видом на шоссе и горы">
+        <span class="promo-photo__title">Неродные просторы</span>
+        <span class="promo-photo__subtitle">Автор фото: Борис</span>
+        <div class="like">
+          <span class="like__number">1350<"/span">
+        </div>
+      </div>
+      <div class="promo-photo">
+        <img class="promo-photo__image" src="#" width="#" height="#" alt="Пушистый кактус на фоне скал">
+        <span class="promo-photo__title">Местная растительность</span>
+        <span class="promo-photo__subtitle">Автор фото: Сергей</span>
+        <div class="like">
+          <span class="like__number">143<"/span">
+        </div>
+      </div>
+      <div class="promo-photo">
+        <img class="promo-photo__image" src="#" width="#" height="#" alt="Дорога в горном лесу: вид сверху">
+        <span class="promo-photo__title">Дорога на север</span>
+        <span class="promo-photo__subtitle">Автор фото: Петр</span>
+        <div class="like">
+          <span class="like__number">96<"/span">
+        </div>
+      </div>
+      <div class="promo-photo">
+        <img class="promo-photo__image" src="#" width="#" height="#" alt="Узкий мостик естественного происхождения в скалах над пропастью">
+        <span class="promo-photo__title">Мост Дьявола</span>
+        <span class="promo-photo__subtitle">Автор фото: Антон</span>
+        <div class="like">
+          <span class="like__number">254<"/span">
+        </div>
+      </div>
+    </section>
+    <section class="commercial">
+      <div class="commercial__content">
+        <h2 class="commercial__title">Все еще сомневаетесь?</h2>
+        <p class="commercial__text">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+      </div>
+      <video class="commercial__video" controls preload="metadata" width="#" height="#" poster="#">
+      </video>
+    </section>
+  </main>
+  <footer>
+  </footer>
+</body>
 </html>
