Сверстала Главную, Ðстраницу ФормыÐ, страницу ФотоÐ

--- a/source/form.html
+++ b/source/form.html
@@ -17,76 +17,76 @@
       <div class="page-form__inner">
         <form class="form" action="#" method="post">
           <fieldset class="form__group">
-            <legend class="form__group-title">Представьтесь:</legend>
+            <legend class="form__group-heading">Представьтесь:</legend>
             <ul class="form__group-list">
               <li class="form__group-item">
-                <label class="form__group-label" for="name">Имя*:</label>
-                <input class="form__group-name" id="name" name="name" type="text" placeholder="Петр" required>
+                <label class="form__group-title" for="name">Имя*:</label>
+                <input class="form__field" id="name" name="name" type="text" placeholder="Петр" required>
               </li>
               <li class="form__group-item">
-                <label class="form__group-label" for="sername">Фамилия*:</label>
-                <input class="form__group-name" id="sername" name="name" type="text" placeholder="Иванов" required>
+                <label class="form__group-title" for="sername">Фамилия*:</label>
+                <input class="form__field" id="sername" name="name" type="text" placeholder="Иванов" required>
               </li>
               <li class="form__group-item">
-                <label class="form__group-label" for="patronym">Отчество:</label>
-                <input class="form__group-name" id="patronym" name="name" type="text" placeholder="Александрович">
+                <label class="form__group-title" for="patronym">Отчество:</label>
+                <input class="form__field" id="patronym" name="name" type="text" placeholder="Александрович">
               </li>
             </ul>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-title">Контактная информация</legend>
+            <legend class="form__group-heading">Контактная информация</legend>
             <ul class="form__group-list">
               <li class="form__group-item">
-                <label class="form__group-label" for="phone-number">Контактный телефон*:</label>
-                <input class="form__group-phone-number" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
+                <label class="form__group-title" for="phone-number">Контактный телефон*:</label>
+                <input class="form__field" id="phone-number" name="tel" type="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="Введите телефон" required>
               </li>
               <li class="form__group-item">
-                <label class="form__group-label" for="email">Электронная почта*:</label>
-                <input class="form__group-e-mail" id="email" name="email" type="email" placeholder="Введите e-mail" required>
+                <label class="form__group-title" for="email">Электронная почта*:</label>
+                <input class="form__field" id="email" name="email" type="email" placeholder="Введите e-mail" required>
               </li>
             </ul>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-title">Ваше общее впечатление:</legend>
+            <legend class="form__group-heading">Ваше общее впечатление:</legend>
             <ul class="form__group-list">
               <li class="form__group-item">
-                <label class="form__group--radio-label" for="positive">Скорее положительное</label>
-                <input class="form__group--radio form__group--radio-checked visually-hidden" id="positive" type="radio" name="positive" checked>
+                <label class="form__radio-title" for="positive">Скорее положительное</label>
+                <input class="form__radio visually-hidden" id="positive" type="radio" name="positive" value="positive" checked>
               </li>
               <li class="form__group-item">
-                <label class="form__group--radio-label" for="negative">Скорее отрицательное</label>
-                <input class="form__group--radio visually-hidden" id="negative" type="radio" name="negative">
+                <label class="form__radio-title" for="negative">Скорее отрицательное</label>
+                <input class="form__radio visually-hidden" id="negative" type="radio" name="negative" value="negative">
               </li>
               <li class="form__group-item">
-                <label class="form__group--radio-label" for="neutral">Затрудняюсь ответить</label>
-                <input class="form__group--radio visually-hidden" id="neutral" type="radio" name="neutral">
+                <label class="form__radio-title" for="neutral">Затрудняюсь ответить</label>
+                <input class="form__radio visually-hidden" id="neutral" type="radio" name="neutral" value="neutral">
               </li>
             </ul>
           </fieldset>
           <fieldset class="form__group">
-            <legend class="form__group-title">Посещенные достопримечательности:</legend>
+            <legend class="form__group-heading">Посещенные достопримечательности:</legend>
             <ul class="form__group-list">
               <li class="form__group-item">
-                <label class="form__group--checkbox-label" for="bridge">Мост Дьявола</label>
-                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="bridge" type="checkbox" name="bridge" checked>
+                <label class="form__checkbox-title" for="bridge">Мост Дьявола</label>
+                <input class="form__checkbox visually-hidden" id="bridge" type="checkbox" name="bridge" value="bridge" checked>
               </li>
               <li class="form__group-item">
-                <label class="form__group--checkbox-label" for="mountain">Гора-Колокол</label>
-                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="mountain" type="checkbox" name="mountain" checked>
+                <label class="form__checkbox-title" for="mountain">Гора-Колокол</label>
+                <input class="form__checkbox visually-hidden" id="mountain" type="checkbox" name="mountain" value="mountain" checked>
               </li>
               <li class="form__group-item">
-                <label class="form__group--checkbox-label" for="park">Слайд-парк</label>
-                <input class="form__group--checkbox form__group--checkbox-checked visually-hidden" id="park" type="checkbox" name="park" checked>
+                <label class="form__checkbox-title" for="park">Слайд-парк</label>
+                <input class="form__checkbox visually-hidden" id="park" type="checkbox" name="park" value="park" checked>
               </li>
               <li class="form__group-item">
-                <label class="form__group--checkbox-label" for="rocks">Красные скалы</label>
-                <input class="form__group--checkbox visually-hidden" id="rocks" type="checkbox" name="rocks">
+                <label class="form__checkbox-title" for="rocks">Красные скалы</label>
+                <input class="form__checkbox visually-hidden" id="rocks" type="checkbox" name="rocks" value="rocks">
               </li>
             </ul>
           </fieldset>
           <div class="form__inner">
-            <label class="form__label" for="review">Опишите свои эмоции:</label>
-            <textarea class="form__description" id="review" name="review" placeholder="Опишите подробно все свои восторги"></textarea>
+            <label class="form__group-heading" for="review">Опишите свои эмоции:</label>
+            <textarea class="form__field form__field-message" id="review" name="review" placeholder="Опишите подробно все свои восторги"></textarea>
           </div>
           <button class="button page-form__button" type="submit">Отправить отзыв</button>
         </form>
