--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
   </header>
   <main>
     <div class="promo">Баннер</div>
-    <section class="many-reasons">
+    <section class="reasons">
       <div class="page-intro">
         <h1 class="page-intro__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="page-intro__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -43,15 +43,15 @@
         <img class="reason__image" src="#" width="#" height="#" alt="Вид на стереотипный мотель Дикого Запада">
       </div>
       <ul class="advantages advantages__list">
-        <li class="advantages__item advantages__icon--housing">
+        <li class="advantages__item advantages__item--housing">
           <h2 class="advantages__item-title">Жилье</h2>
           <p class="advantages__item-text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
-        <li class="advantages__item advantages__icon--souvenirs">
+        <li class="advantages__item advantages__item--souvenirs">
           <h2 class="advantages__item-title">Сувениры</h2>
           <p class="advantages__item-text">Не только китайского, но и местного производства!</p>
         </li>
-        <li class="advantages__item advantages__icon--food">
+        <li class="advantages__item advantages__item--food">
           <h2 class="advantages__item-title">Еда</h2>
           <p class="advantages__item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
@@ -62,20 +62,20 @@
         <p class="reason__text">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
         <img class="reason__image" src="#" width="#" height="#" alt="Узкий каменный мостик над пропастью">
       </div>
-      <div class="reason great-reason">
-        <h2 class="great-reason__title">Небольшая площадь</h2>
-        <span class="great-reason__index-number">№3</span>
-        <p class="great-reason__text">Все интересные места находятся очень близко</p>
+      <div class="reason reason--secondary">
+        <h2 class="reason__title">Небольшая площадь</h2>
+        <span class="reason__index-number">№3</span>
+        <p class="reason__text">Все интересные места находятся очень близко</p>
       </div>
-      <div class="reason great-reason">
-        <h2 class="great-reason__title">Красивая дорога</h2>
-        <span class="great-reason__index-number">№4</span>
-        <p class="great-reason__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      <div class="reason reason--secondary">
+        <h2 class="reason__title">Красивая дорога</h2>
+        <span class="reason__index-number">№4</span>
+        <p class="reason__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
-      <div class="reason great-reason">
-        <h2 class="great-reason__title">Мало туристов</h2>
-        <span class="great-reason__index-number">№5</span>
-        <p class="great-reason__text">Большинство едет в Гранд Каньон и толпится там</p>
+      <div class="reason reason--secondary">
+        <h2 class="reason__title">Мало туристов</h2>
+        <span class="reason__index-number">№5</span>
+        <p class="reason__text">Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </section>
     <section class="commercial">
@@ -91,7 +91,7 @@
   </main>
   <footer class="main-footer">
     <span class="main-footer__hashtag">#visitsedona</span>
-    <ul class="social social__list">
+    <ul class="social">
       <li class="social__item">
         <a class="social__link social__link--twitter" href="#">
           <span class="visually-hidden">Твиттер</span>
