--- a/source/photo.html
+++ b/source/photo.html
@@ -9,41 +9,49 @@
   </header>
   <main>
     <div class="promo promo--inner">Баннер</div>
-    <section class="photo-video">
+    <section class="photo">
       <div class="page-intro">
         <h1 class="page-intro__title">Фото и видео</h1>
         <p class="page-intro__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
       </div>
       <div class="promo-photo">
-        <img class="promo-photo__image" src="#" width="#" height="#" alt="Закат с видом на шоссе и горы">
+        <a class="promo-photo__link" href="#">
+          <img class="promo-photo__image" src="#" width="#" height="#" alt="Закат с видом на шоссе и горы">
+        </a>
         <span class="promo-photo__title">Неродные просторы</span>
         <span class="promo-photo__subtitle">Автор фото: Борис</span>
-        <div class="like">
-          <span class="like__number">1350<"/span">
+        <div class="promo-photo__like">
+          <span class="promo-photo__like-number">1350<"/span">
         </div>
       </div>
       <div class="promo-photo">
-        <img class="promo-photo__image" src="#" width="#" height="#" alt="Пушистый кактус на фоне скал">
+        <a class="promo-photo__link" href="#">
+          <img class="promo-photo__image" src="#" width="#" height="#" alt="Пушистый кактус на фоне скал">
+        </a>
         <span class="promo-photo__title">Местная растительность</span>
         <span class="promo-photo__subtitle">Автор фото: Сергей</span>
-        <div class="like">
-          <span class="like__number">143<"/span">
+        <div class="promo-photo__like">
+          <span class="promo-photo__like-number">143<"/span">
         </div>
       </div>
       <div class="promo-photo">
-        <img class="promo-photo__image" src="#" width="#" height="#" alt="Дорога в горном лесу: вид сверху">
+        <a class="promo-photo__link" href="#">
+          <img class="promo-photo__image" src="#" width="#" height="#" alt="Дорога в горном лесу: вид сверху">
+        </a>
         <span class="promo-photo__title">Дорога на север</span>
         <span class="promo-photo__subtitle">Автор фото: Петр</span>
-        <div class="like">
-          <span class="like__number">96<"/span">
+        <div class="promo-photo__like">
+          <span class="promo-photo__like-number">96<"/span">
         </div>
       </div>
       <div class="promo-photo">
-        <img class="promo-photo__image" src="#" width="#" height="#" alt="Узкий мостик естественного происхождения в скалах над пропастью">
+        <a class="promo-photo__link" href="#">
+          <img class="promo-photo__image" src="#" width="#" height="#" alt="Узкий мостик естественного происхождения в скалах над пропастью">
+        </a>
         <span class="promo-photo__title">Мост Дьявола</span>
         <span class="promo-photo__subtitle">Автор фото: Антон</span>
-        <div class="like">
-          <span class="like__number">254<"/span">
+        <div class="promo-photo__like">
+          <span class="promo-photo__like-number">254<"/span">
         </div>
       </div>
     </section>
