--- a/source/photo.html
+++ b/source/photo.html
@@ -3,10 +3,33 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="page-header">
+    <nav class="main-nav page-header__menu">
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">Главная</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">Фото и видео</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">Форма отзыва</a>
+        </li>
+        <li class="main-nav__item">
+          <a class="main-nav__link" href="#">html academy</a>
+        </li>
+      </ul>
+      <button class="main-nav__button--close main-nav__button--open" type="button">Меню</button>
+    </nav>
+    <div class="logo page-header__logo">
+      <a class="logo__link">
+        <img class="logo__image" src="#" width="#" height="#" alt="логотип сайта Седона">
+      </a>
+    </div>
   </header>
   <main>
     <div class="promo promo--inner">Баннер</div>
@@ -65,7 +88,29 @@
       </video>
     </section>
   </main>
-  <footer>
+  <footer class="page-footer">
+    <span class="page-footer__hashtag">#visitsedona</span>
+    <ul class="social">
+      <li class="social__item">
+        <a class="social__link social__link--twitter" href="#">
+          <span class="visually-hidden">Твиттер</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--fb" href="#">
+          <span class="visually-hidden">Фэйсбук</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link social__link--youtube" href="#">
+          <span class="visually-hidden">Ютюб</span>
+        </a>
+      </li>
+    </ul>
+    <div class="copyright">
+      <p class="copyright__content">Разработано</p>
+      <a class="copyright__icon" href="https://htmlacademy.ru/intensive/adaptive"></a>
+    </div>
   </footer>
 </body>
 </html>
